# shroud

./: .flake8  .gitignore  .readthedocs.yml  .travis.yaml  .travis.yml  CHANGELOG  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT  HACKING  HACKING.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-test.yml
compiler/: Makefile
compiler/assign/: README.md
compiler/cmake/: CMakeLists.txt  config.h.in
compiler/config/: Makefile  assumed-type-c.c  assumed-type-f.f  defaults.mk  demo-cfi-c.c  demo-cfi-f.f
compiler/final/: Makefile  README.md  testmod.f
dist-nuitka/: shroud.py
docs/: appendix-A.rst  appendix-PY.rst  classes.rst  conf.py  cookbook.rst  cstatements.rst  cwrapper.rst  declarations.rst  defaultargs.rst  expand.rst  fortran.rst  fstatements.rst  functions.rst  futurework.rst  glossary.rst  helpers.rst  index.rst  input.rst  installing.rst  introduction.rst  lua.rst  namespaces.rst  output.rst  pointers.rst  preprocessing.rst  previouswork.rst  pypreviouswork.rst  python.rst  pytutorial.rst  reference.rst  releases.rst  shared_ptr.rst  statements.rst  struct.rst  templates.rst  tutorial.rst  typemaps.rst  types.rst
examples/: README.md
examples/clib/: GNUmakefile
examples/hello-world-python/: .gitignore  Dockerfile  Makefile  README.md  helloworld.cpp  helloworld.hpp  helloworld.json  helloworld.yaml  helloworld_types.yaml  setup.py
examples/libc/: GNUmakefile  README.md  libc.yaml
examples/pyclib/: libc.yaml
examples/src/: CMakeLists.txt  GNUmakefile  do-sample.f  sample.cpp  sample.hpp  sample.yaml
regression/: README.md  cdesc.yaml  clibrary.yaml  csplicer.c  do-test.py  enum.yaml  example.yaml  forward.yaml  fsplicer.f  ftutorialsplicer.f  generic.yaml  include.yaml  interface.yaml  memdoc.yaml  names.yaml  names2.yaml  namespace.yaml  namespacedoc.yaml  none.yaml  ownership.yaml  pointers.yaml  preprocess.yaml  pysplicer.c  scope.yaml  statement.yaml  strings.yaml  struct.yaml  templates.yaml  tutorial.yaml  types.yaml  vectors.yaml
regression/input/: arrayclass.yaml  ccomplex.yaml  cdesc.yaml  char.yaml  classes.yaml  clibrary.yaml  csplicer.c  ctr29113splicer.c  cxxlibrary.yaml  defaultarg.yaml  enum.yaml  error-ast.yaml  error-fmt.yaml  error-generate.yaml  error-stmt.yaml  error.yaml  errors.yaml  example.yaml  forward.yaml  fsplicer.f  ftr29113splicer.f  ftutorialsplicer.f  funptr.yaml  generic.yaml  include.yaml  interface.yaml  memdoc.yaml  nameapi.yaml  names.yaml  names2.yaml  namespace.yaml  namespacedoc.yaml  none.yaml  overload.yaml  ownership.yaml  pointers.yaml  preprocess.yaml  pysplicer.c  references.yaml  scope.yaml  (+15 more)
regression/other/: defaults.mk
regression/run/: Makefile  defaults.mk
scripts/: cmp-shroud  gitlab.mk  lc.mk  summary.py  test-lc.sh  update-copyrigh-date.sh
shroud/: __init__.py  ast.py  declast.py  declstr.py  error.py  fc-statements.json  fc-statements.yaml  fcfmt.py  fcmem.py  generate.py  main.py  metaattrs.py  metadata.py  parse_decl.py  splicer.py  statements.py  todict.py  typemap.py  util.py  visitor.py  whelpers.py  wrapc.py  wrapf.py  wrapl.py  wrapp.py
tests/: __init__.py  check_decl.output  check_decl.py  clibrary.yaml  csplicer.c  defaults.mk  do_test.py  example.yaml  forward.yaml  fsplicer.f  ftutorialsplicer.f  include.yaml  interface.yaml  names.yaml  none.yaml  ownership.yaml  pysplicer.c  sample_api.py  strings.yaml  test_ast.py  test_declast.py  test_format.py  test_generate.py  test_parse_decl.py  test_shroud.py  test_statements.py  test_typemap.py  test_util.py  test_wrapf.py  test_wrapp.py  tutorial.yaml  vectors.yaml
tests/clibrary/: clibrary.json  output  pyClibraryhelper.c  pyClibrarymodule.c  pyClibrarymodule.h  typesClibrary.h  wrapClibrary.c  wrapClibrary.h  wrapfclibrary.f
tests/example/: example.json  luaUserLibrarymodule.cpp  luaUserLibrarymodule.hpp  output  pyExClass1type.cpp  pyExClass2type.cpp  pyUserLibraryhelper.cpp  pyUserLibrarymodule.cpp  pyUserLibrarymodule.hpp  shroudrt.cpp  shroudrt.hpp  typesUserLibrary.h  userlibrary_types.yaml  wrapExClass1.cpp  wrapExClass1.h  wrapExClass2.cpp  wrapExClass2.h  wrapExClass3.cpp  wrapExClass3.h  wrapUserLibrary.cpp  wrapUserLibrary.h  wrapfExClass1.f  wrapfExClass2.f  wrapfExClass3.f  wrapfuserlibrary.f
tests/forward/: forward.json  forward_types.yaml  luaforwardmodule.cpp  luaforwardmodule.hpp  output  pyClass2type.cpp  pyforwardhelper.cpp  pyforwardmodule.cpp  pyforwardmodule.hpp  typesforward.h  wrapClass2.cpp  wrapClass2.h  wrapfforward.f  wrapforward.cpp
tests/include/: default_library_types.yaml  include.json  output  typesdefault_library.h  wrapClass1.cpp  wrapClass1.h  wrapClass2.cpp  wrapClass2.h  wrapdefault_library.cpp  wrapdefault_library.h  wrapfClass1.f  wrapfClass2.f  wrapfdefault_library.f
tests/interface/: interface.json  output  typesInterface.h  wrapInterface.c  wrapfinterface.f
tests/names/: foo.cpp  foo.f  foo.h  names.json  output  pyNames2type.cpp  pyNamestype.cpp  pytestnameshelper.cpp  pytestnamesmodule.cpp  pytestnamesmodule.hpp  shroudrt.cpp  testnames_types.yaml  top.cpp  top.f  top.h  typestestnames.hh  wrapNames2.cc  wrapNames2.hh  wrapfNames2.F
tests/none/: none.json  output  shroudrt.cpp  shroudrt.hpp  typesdefault_library.h  wrapdefault_library.cpp
tests/ownership/: luaownershipmodule.cpp  luaownershipmodule.hpp  output  ownership.json  ownership_types.yaml  pyClass1type.cpp  pyownershiphelper.cpp  pyownershipmodule.cpp  pyownershipmodule.hpp  typesownership.h  wrapClass1.cpp  wrapClass1.h  wrapfownership.f  wrapownership.cpp  wrapownership.h
tests/run/: Makefile
tests/run-clibrary/: Makefile  clibrary.c  clibrary.h  main.f  mainc.c
tests/run-ownership/: Makefile  main.f  maincpp.cpp  ownership.cpp  ownership.hpp
tests/run-strings/: Makefile  main.f  strings.cpp  strings.hpp
tests/run-tutorial/: Makefile  main.f  maincpp.cpp  testc.c  tutorial.cpp  tutorial.hpp
tests/run-vectors/: Makefile  main.f  vectors.cpp  vectors.hpp
tests/small/: output  shroudrt.cpp  small.json  wrapdefault_library.cpp  (+2 more)
(+1605 files in other folders)
